# SJSU-CS-149

./: CMakeLists.txt  README.md
libs/zf_log/: CMakeLists.txt
scripts/: Expected results.txt  cmds  file_a  file_e  file_no.txt  init  init.01  init1  test_init.txt
src/: config.h  cpu.c  cpu.h  main.c  manager.c  manager.h  pcb.c  pcb.h  program.c  program.h  queues.c  queues.h  scheduler.c  scheduler.h
tests/00/: cmds  file_no  init  results
tests/01/: cmds  results
tests/02/: cmds  file2  init  results
tests/03/: calc.prog  cmds  init  results
tests/t1/: cmds  file1  init
